<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="6dp"
    android:layout_marginRight="6dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cVUserRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUserRoom"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toStartOf="@+id/tvGender"
                app:layout_constraintStart_toEndOf="@+id/imgUserRoom"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tvPersonName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    tools:text="@string/name_room"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    tools:text="@string/address_room"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:maxLines="1"
                    tools:text="@string/company_name"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvGender"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                tools:text="@string/male"
                android:textSize="19sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>